@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.4 2000/07/16 18:03:59 mo Exp $
+# RCS: @(#) $Id: clock.test,v 1.5 2000/08/20 06:36:14 mo Exp $
 
 if {[string compare test [info procs test]] == 1} then {source defs}
 
@@ -178,13 +178,20 @@ test clock-4.17 {clock scan, ISO 8601 point in time format} {
     set time [clock scan "19921023 235959"]
     clock format $time -format {%b %d, %Y %H:%M:%S}
 } "Oct 23, 1992 23:59:59"
+test clock-4.18 {clock scan, ISO 8601 point in time format} {
+    set time [clock scan "19921023T000000"]
+    clock format $time -format {%b %d, %Y %H:%M:%S}
+} "Oct 23, 1992 00:00:00"
 
 # CLOCK SCAN REAL TESTS
+# We use 5am PST, 31-12-1999 as the base for these scans because irrespective
+# of your local timezone it should always give us times on December 31, 1999
+set 5amPST 946645200
 test clock-4.18 {clock scan, number meridian} {
-    set t1 [clock scan "5 am" -base 946627200 -gmt true]
-    set t2 [clock scan "5 pm" -base 946627200 -gmt true]
-    set t3 [clock scan "5 a.m." -base 946627200 -gmt true]
-    set t4 [clock scan "5 p.m." -base 946627200 -gmt true]
+    set t1 [clock scan "5 am" -base $5amPST -gmt true]
+    set t2 [clock scan "5 pm" -base $5amPST -gmt true]
+    set t3 [clock scan "5 a.m." -base $5amPST -gmt true]
+    set t4 [clock scan "5 p.m." -base $5amPST -gmt true]
     list \
 	    [clock format $t1 -format {%b %d, %Y %H:%M:%S} -gmt true] \
 	    [clock format $t2 -format {%b %d, %Y %H:%M:%S} -gmt true] \
@@ -193,27 +200,27 @@ test clock-4.18 {clock scan, number meridian} {
 } [list "Dec 31, 1999 05:00:00" "Dec 31, 1999 17:00:00" \
 	"Dec 31, 1999 05:00:00" "Dec 31, 1999 17:00:00"]
 test clock-4.19 {clock scan, number:number meridian} {
-    clock format [clock scan "5:30 pm" -base 946627200 -gmt true] \
+    clock format [clock scan "5:30 pm" -base $5amPST -gmt true] \
 	    -format {%b %d, %Y %H:%M:%S} -gmt true
 } "Dec 31, 1999 17:30:00"
 test clock-4.20 {clock scan, number:number-timezone} {
-    clock format [clock scan "00:00-0800" -gmt true -base 946627200] \
+    clock format [clock scan "00:00-0800" -gmt true -base $5amPST] \
 	    -format {%b %d, %Y %H:%M:%S} -gmt true
 } "Dec 31, 1999 08:00:00"
 test clock-4.21 {clock scan, number:number:number o_merid} {
-    clock format [clock scan "8:00:00" -gmt true -base 946627200] \
+    clock format [clock scan "8:00:00" -gmt true -base $5amPST] \
 	    -format {%b %d, %Y %H:%M:%S} -gmt true
 } "Dec 31, 1999 08:00:00"
 test clock-4.22 {clock scan, number:number:number o_merid} {
-    clock format [clock scan "8:00:00 am" -gmt true -base 946627200] \
+    clock format [clock scan "8:00:00 am" -gmt true -base $5amPST] \
 	    -format {%b %d, %Y %H:%M:%S} -gmt true
 } "Dec 31, 1999 08:00:00"
 test clock-4.23 {clock scan, number:number:number o_merid} {
-    clock format [clock scan "8:00:00 pm" -gmt true -base 946627200] \
+    clock format [clock scan "8:00:00 pm" -gmt true -base $5amPST] \
 	    -format {%b %d, %Y %H:%M:%S} -gmt true
 } "Dec 31, 1999 20:00:00"
 test clock-4.24 {clock scan, number:number:number-timezone} {
-    clock format [clock scan "00:00:30-0800" -gmt true -base 946627200] \
+    clock format [clock scan "00:00:30-0800" -gmt true -base $5amPST] \
 	    -format {%b %d, %Y %H:%M:%S} -gmt true
 } "Dec 31, 1999 08:00:30"
 test clock-4.25 {clock scan, DST for days} {
@@ -326,6 +333,11 @@ test clock-4.40 {last monday in november} knownBug {
     }
     set res
 } {1991-11-25 1992-11-30 1993-11-29 1994-11-28 1995-11-27 1996-11-25}
+test clock-4.41 {ago with multiple relative units} {
+    set base [clock scan "12/31/1999 00:00:00"]
+    set res [clock scan "2 days 2 hours ago" -base $base]
+    expr {$base - $res}
+} 180000
 
 # clock seconds
 test clock-5.1 {clock seconds tests} {
